Fixed minor bugs

--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -45,7 +45,7 @@ const { title, stack, date, links, image } = Astro.props;
         )
     }
     {/* Paragraphs */}
-    <div class="my-3 text-lg leading-loose text-mix">
+    <div class="my-3 flex flex-col gap-y-5 text-lg leading-loose text-mix">
         <slot />
     </div>
 </section>
