--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -2,7 +2,7 @@
 import Layout from "@layouts/Layout.astro";
 import ProjectList from "@components/ProjectList.astro";
 import LargeDivider from "@components/LargeDivider.astro";
-import { getCollection, getEntries } from "astro:content";
+import { getCollection } from "astro:content";
 
 const activeCollection = await getCollection("active");
 const completedCollection = await getCollection("completed");
