--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -66,9 +66,9 @@ const routes: Route[] = [
                     alt="Circle gradient logo"
                     class="aspect-square w-14 animate-[spin_3s_linear_infinite]"
                 />
-                <h3 class="justify-self-start text-2xl font-semibold">
+                <span class="justify-self-start text-2xl font-semibold">
                     Zeke Abshire
-                </h3>
+                </span>
             </div>
 
             {
