--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -15,7 +15,7 @@ const { title, stack, date, links, image } = Astro.props;
                 <img
                     src={image}
                     alt="project preview"
-                    class="aspect-video w-full rounded-2xl md:rounded-[2rem]"
+                    class="aspect-video w-full rounded-2xl sm:rounded-3xl md:rounded-[2.25rem] lg:rounded-[3rem]"
                 />
                 <ProjectIcons
                     figma={links.figma}
